# taskloop

./: .gitignore  README.md  marketplace.json  orchestrator.toml.example  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: plan.md  spec.md
docs/: scheduling.md
orc/: cli.py  config.py  eligibility.py  escalation.py  github.py  harness.py  locking.py  log.py  runner.py  state.py  telemetry.py  ticket.py  verify.py  worktree.py
tests/: test_config.py  test_e2e.py  test_eligibility.py  test_github.py  test_harness.py  test_locking.py  test_runner.py  test_state.py  test_status.py  test_ticket.py  test_verify.py  test_worktree.py
tests/fakes/: fake_harness.py
tests/fixtures/repo/tasks/: T-001.md  T-002.md  T-003.md
