[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["orc*"]

[project]
name = "orc"
version = "0.1.0"
requires-python = ">=3.12"

[project.scripts]
orc = "orc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==8.2.*",
    "ruff==0.5.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
